--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+<% if user_signed_in? %>
+    <span>Hi, <%= current_user.email %></span><br>
+    <%= link_to 'Show posts', posts_path %>
+    <%= link_to "Send a hello letter", send_letter_path  %> 
+    <%= link_to 'Log out', destroy_user_session_path, :method => :delete %>
+<% else %>
+    <%= link_to 'Log in', new_user_session_path %> или <%= link_to 'Sign up', new_user_registration_path %>
+<% end %>
 <%= yield %>
-
 </body>
 </html>
